# How_to_Check_PythonTest_Cases_Using_ADO

./: README.md  azure-pipelines.yml  pyproject.toml  test-output.xml
test/: test_simple.py
