[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SimplepythonProject"
version = "0.0.1"
authors = [
  { name="Harshit", email="harshit@example.com" },
]
description = "Testing build package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://dev.azure.com/hershal8090gupta/_git/Test-Orchestrator-Repo"
